# albatross-rs

./: Cargo.toml  README.md
src/: cli.yml  config.rs  main.rs
ubuntu-14.04-amd64/: Dockerfile  toolchain.cmake
ubuntu-14.04-i386/: Dockerfile  toolchain.cmake
ubuntu-16.04-amd64/: Dockerfile  toolchain.cmake
ubuntu-16.04-i386/: Dockerfile  toolchain.cmake
